add portfolio page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,5 +8,12 @@
 @import "partials/buttons";
 @import "partials/cards";
 @import "partials/common";
+
+/*=========================*/
+
+@import "partials/pages/potfolio";
+
+/*=========================*/
+
 @import "partials/media";
 
