add voltic presentation

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@
 /*=========================*/
 
 @import "partials/pages/potfolio";
+@import "partials/pages/voltic";
 
 /*=========================*/
 
