--- a/src/style/partials/media.scss
+++ b/src/style/partials/media.scss
@@ -1,10 +1,10 @@
 @media screen and (max-width: 1600px) {
   .full-width-banner {
-    min-height: 500px;
-    background-size: 1600px 500px;
+    min-height: 500px !important;
+    background-size: 1600px 500px !important;
   }
   .section-buying-selling {
-    background-size: 660px;
+    background-size: 660px !important;
   }
 }
 
@@ -26,11 +26,11 @@
     }
   }
   .full-width-banner {
-    background-size: 1024px 400px;
-    min-height: 400px;
+    background-size: 1024px 400px !important;
+    min-height: 400px !important;
   }
   .section-buying-selling {
-    background-size: 410px;
+    background-size: 410px !important;
   }
   .section-inner {
     padding: 40px 0 50px 0;
@@ -60,11 +60,11 @@
     }
   }
   .full-width-banner {
-    background-size: 768px 300px;
-    min-height: 300px;
+    background-size: 768px 300px !important;
+    min-height: 300px !important;
   }
   .section-buying-selling {
-    background-size: 323px;
+    background-size: 323px !important;
   }
 
   .title-inner {
@@ -153,8 +153,8 @@
     flex-basis: 100%;
   }
   .full-width-banner {
-    background-size: 375px 130px;
-    min-height: 130px;
+    background-size: 576px 180px !important;
+    min-height: 180px !important;
   }
   .holder-technologies {
     flex-wrap: wrap;
