--- a/src/style/partials/pages/potfolio.scss
+++ b/src/style/partials/pages/potfolio.scss
@@ -31,7 +31,7 @@
       margin: 0 0 0 5px;
     }
     a {
-      width: 90px;
+      min-width: 90px;
       height: 30px;
       background: #fff;
       display: flex;
