add candyskins presetation page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,7 @@
 
 @import "partials/pages/potfolio";
 @import "partials/pages/voltic";
+@import "partials/pages/candyskins";
 
 /*=========================*/
 
