--- a/src/style/partials/cards.scss
+++ b/src/style/partials/cards.scss
@@ -1,3 +1,10 @@
+.displayNone {
+  display: none !important;
+}
+.displayBlock {
+  display: block;
+}
+
 .projects-holder {
   position: relative;
   display: flex;
