--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -18,7 +18,9 @@ $fz-18: 18px;
 $bg-grey: #ebebeb;
 $bg-dark: #162636;
 $bg-orange: #ff935c;
+$dark-grey: #363636;
 
 /*Border*/
 
 $section-border: 5px solid #ebebeb;
+$dark-border: #484849;
