--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,6 +14,7 @@
 @import "partials/pages/potfolio";
 @import "partials/pages/voltic";
 @import "partials/pages/candyskins";
+@import "partials/pages/gamblingAndBetting";
 
 /*=========================*/
 
