--- a/src/style/partials/section.scss
+++ b/src/style/partials/section.scss
@@ -4,7 +4,10 @@
 
 .section-inner {
   padding: 175px 0 200px 0;
+}
 
+.section-contact {
+  overflow: hidden;
 }
 
 .section-title {
@@ -15,6 +18,9 @@
     color: $title-color;
     text-transform: uppercase;
     text-align: center;
+    span {
+      color: $bg-orange;
+    }
   }
 }
 
