--- a/src/style/partials/media.scss
+++ b/src/style/partials/media.scss
@@ -128,10 +128,9 @@
     justify-content: space-between;
     flex-wrap: wrap;
     li {
-      margin: 0;
-      &:first-child,
+      margin: 0 0 5px 0;
       &:last-child {
-        margin: 0;
+        margin: 0 0 5px 0;
       }
     }
   }
