--- a/src/style/partials/media.scss
+++ b/src/style/partials/media.scss
@@ -42,6 +42,16 @@
       }
     }
   }
+
+  /*roulette*/
+
+  .main-circle {
+    width: 900px;
+    height: 900px;
+  }
+  .holder-section-roulette {
+    transform: translate(-50%,9%);
+  }
 }
 
 @media screen and (max-width: 768px) {
