add realestate page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,6 +15,7 @@
 @import "partials/pages/voltic";
 @import "partials/pages/candyskins";
 @import "partials/pages/gamblingAndBetting";
+@import "partials/pages/realestate";
 
 /*=========================*/
 
