--- a/src/style/partials/cards.scss
+++ b/src/style/partials/cards.scss
@@ -8,7 +8,7 @@
 .projects-holder {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
