--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,6 +7,7 @@
 @import "partials/breadcrumbs";
 @import "partials/buttons";
 @import "partials/cards";
+@import "partials/animate.css";
 @import "partials/common";
 
 /*=========================*/
