add health and logistics pages

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,6 +17,9 @@
 @import "partials/pages/candyskins";
 @import "partials/pages/gamblingAndBetting";
 @import "partials/pages/realestate";
+@import "partials/pages/ecommerce";
+@import "partials/pages/healthCare";
+@import "partials/pages/logistics";
 
 /*=========================*/
 
